--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "ffmpeg-wrapper"
 version = "0.1.0"
 authors = ["Masaharu TASHIRO <masatsr.kit@gmail.com>"]
 edition = "2018"
+license = "MIT"
 publish = false
 default-run = "main"
 
